--- a/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
+++ b/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="list-group col-12">
     <a (click)="choisirCocktail(index)"
+      [appActive]="index === activeCocktail"
       *ngFor="let cocktail of cocktails; let index= index"
        href="#" class="list-group-item list-group-item-action">{{cocktail.name}}</a>
   </div>
