Add Panier component Add Routing Refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <div class="container">
-  <app-cocktails-container></app-cocktails-container>
+  <router-outlet></router-outlet>
 </div>
