--- a/src/app/cocktails-container/cocktails-container.component.html
+++ b/src/app/cocktails-container/cocktails-container.component.html
@@ -1,6 +1,8 @@
 <div class ="container-fluid">
   <div class="row">
    <app-cocktails-list (choisir)="choisirCocktail($event)"  class="col-5"></app-cocktails-list>
-    <app-cocktails-details class="col-7"></app-cocktails-details>
+    <div class="col-7">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
