--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-light">
-  <a class="navbar-brand" href="#">Cocktails</a>
+  <a class="nav-link" routerLink="/">Cocktails</a>
   <button class="navbar-toggler">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse ml-auto"></div>
+  <div class="collapse navbar-collapse"></div>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
       <a class="nav-link active" href="#">Recettes</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" routerLink="/panier">Panier</a>
     </li>
   </ul>
 </nav>
