--- a/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
+++ b/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
@@ -2,7 +2,9 @@
   <div class="list-group col-12">
     <a
       *ngFor="let cocktail of cocktails; let index= index"
-       [routerLink]="[index]" class="list-group-item list-group-item-action">{{cocktail.name}}</a>
+      [routerLink]="[index]"
+      routerLinkActive="active"
+      class="list-group-item list-group-item-action">{{cocktail.name}}</a>
   </div>
 </div>
 <hr>
