--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse"></div>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Recettes</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/cocktails">Cocktails</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" routerLink="/panier">Panier</a>
+      <a class="nav-link" routerLinkActive="active" routerLink="/panier">Panier</a>
     </li>
   </ul>
 </nav>
