Debut modification Cocktails
Formulaire

--- a/src/app/cocktails-container/cocktails-details/cocktails-details.component.html
+++ b/src/app/cocktails-container/cocktails-details/cocktails-details.component.html
@@ -17,6 +17,6 @@
   </ul>
 </div>
 <div class="row">
-  <button class="btn btn-success"> Editer cocktail</button>
+  <button class="btn btn-success" [routerLink]="getUrl()"> Editer cocktail</button>
   <button class="btn btn-secondary ml-auto" (click)="ajouterAuPanier(cocktail.ingredients)"> Ajouter au  panier</button>
 </div>
