--- a/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
+++ b/src/app/cocktails-container/cocktails-list/cocktails-list.component.html
@@ -9,5 +9,5 @@
 </div>
 <hr>
 <div class="row">
-    <button class="btn btn-success">Ajouter un cocktail</button>
+    <button class="btn btn-success" routerLink="new">Ajouter un cocktail</button>
 </div>
