--- a/src/app/cocktails-container/cocktails-container.component.html
+++ b/src/app/cocktails-container/cocktails-container.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class ="container-fluid">
   <div class="row">
    <app-cocktails-list (choisir)="choisirCocktail($event)"  class="col-5"></app-cocktails-list>
